# inma-backend

./: .dockerignore  Dockerfile  Dockerfile.dev  docker_compose.yaml  docker_compose.yml  pyproject.toml
data/csv/: reverse_geocode_inm.csv
data/json/: columns.json  doc.txt  localizations.json
db/: index.faiss  index.pkl  inmuebles.db  json_view_data.json
prompts/: ANSWER_NAME_PROMPT.txt  CLASSIFICATION_PROMPT.txt  CONFIRM_FORM_PROMPT.txt  CONTACT_PROMPT.txt  NAME_PROMPT.txt  OFF_TOPIC_PROMPT.txt  PRESENTATION_PROMPT.txt
prompts/qa_chain/: BROAD_QUERY_PROMPT.txt  CHECK_QUERY_PROMPT.txt  FINANCIAL_INFO_PROMPT.txt  FINANCIAL_PARSER_PROMPT.txt  GENERATE_SQL_QUERY_PROMPT.txt  GENERIC_ANSWER_PROMPT.txt  MORE_INFO_PROMPT.txt  QA_GENERAL_PROMPT.txt  QA_TOOL_EXPLANATION.txt  SPECIFIC_ANSWER_PROMPT.txt
prompts/rag_chain/: RAG_CHAIN_PROMPT.txt
prompts/visit_chain/: CONFIRM_VISIT_PROMPT.txt  ID_OF_INTEREST.txt
resources/: contact_info.json  search_table_generation_query.txt  tool_instructions.json
src/: main.py
src/core/: factories.py  middleware.py  settings.py
src/data_generation/: data_cleaner.py  data_enrichment.py  data_retriever.py  json_view_data_generation.py  load_app_data.py  sql_search_generation.py
src/database/: mongo.py  postgres.py  redis.py
src/dependencies/: combined_dependencies.py  messages_dependence.py  services_dependencies.py  session_dependece.py
src/logic/: form_chain.py  qa_chain.py  rag_chain.py  router_chain.py  visit_chain.py
src/models/: messages.py  session.py  user.py
src/routers/: base.py  chat.py  health.py  session.py  (+2 more)
(+10 files in other folders)
